# llm_eval

./: README.md  workspace.code-workspace
humaneyes/: config.yaml.example  pyproject.toml
humaneyes/humaneyes/: config.py  eval_model.py
humaneyes/tests/: test_relevance.py
humaneyes/tests/test_data/: test_case.json
