[tool.poetry]
name = "humaneyes"
version = "0.1.0"
description = ""
authors = ["Stef Ruinard <stefruinard@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
deepeval = "^0.21.42"
python-dotenv = "^1.0.1"
pytest = "^8.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
